// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`step 1: cirno init 1`] = `
stdout: |2
   SUCCESS  Cirno project initialized at /data.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: releases
        entries: []
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      instances: []
  - type: directory
    name: instances
    entries: []
  - type: directory
    name: temp
    entries: []

`;

exports[`step 2: cirno import /fixtures/bar 1`] = `
stdout: |2
   SUCCESS  Successfully imported instance cd5fbb72-8243-5ccf-b8ca-ceee993585f7.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries:
          - type: file
            name: .gitignore
          - type: file
            name: '@types-emscripten-npm-1.39.13-baf7427522-99c314418b.zip'
          - type: file
            name: '@yarnpkg-fslib-npm-3.1.0-821f4faf89-e327aaf73f.zip'
          - type: file
            name: '@yarnpkg-libzip-npm-3.1.0-73edb40bfc-11e12724d9.zip'
          - type: file
            name: tslib-npm-2.6.3-0fd136b3be-2598aef53d.zip
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.2.2.cjs
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      instances:
        - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
          name: bar
          created: '<timestamp>'
          updated: '<timestamp>'
  - type: directory
    name: instances
    entries:
      - type: directory
        name: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: directory
    name: temp
    entries: []

`;

exports[`step 3: cirno export <#1> /exports/bar.zip 1`] = `
stdout: |2
   SUCCESS  Successfully exported instance cd5fbb72-8243-5ccf-b8ca-ceee993585f7 to /exports/bar.zip.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries:
          - type: file
            name: .gitignore
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.2.2.cjs
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      instances:
        - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
          name: bar
          created: '<timestamp>'
          updated: '<timestamp>'
  - type: directory
    name: instances
    entries:
      - type: directory
        name: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: directory
    name: temp
    entries: []

`;

exports[`step 4: cirno remove <#1> 1`] = `
stdout: |2
   SUCCESS  Instance cd5fbb72-8243-5ccf-b8ca-ceee993585f7 is successfully removed.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries:
          - type: file
            name: .gitignore
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.2.2.cjs
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      instances: []
  - type: directory
    name: instances
    entries: []
  - type: directory
    name: temp
    entries: []

`;

exports[`step 5: cirno import /exports/bar.zip 1`] = `
stdout: |2
   SUCCESS  Successfully imported instance 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries:
          - type: file
            name: .gitignore
          - type: file
            name: '@types-emscripten-npm-1.39.13-baf7427522-99c314418b.zip'
          - type: file
            name: '@yarnpkg-fslib-npm-3.1.0-821f4faf89-e327aaf73f.zip'
          - type: file
            name: '@yarnpkg-libzip-npm-3.1.0-73edb40bfc-11e12724d9.zip'
          - type: file
            name: tslib-npm-2.6.3-0fd136b3be-2598aef53d.zip
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.2.2.cjs
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      instances:
        - id: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
          name: bar
          created: '<timestamp>'
          updated: '<timestamp>'
  - type: directory
    name: instances
    entries:
      - type: directory
        name: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: directory
    name: temp
    entries: []

`;
